# SWM_SEIL_Common_CFN

./: DETAILED_README.md
r2_seil_common/: .gitignore  README.md  bandit-default.yaml  python-code-check.sh
r2_seil_common/cfn/parameters/: dev-ssmParameters.yaml  (+2 more)
r2_seil_common/docs/: APIGateway.md  AppFlowStacks.md  AwsShield.md  AzureDevOpsIntegration.md  KeyPolicies.md  NACLs.md  Naming.docx  Naming.md  Networking.md  PythonCodeQualityCheck.md  SchemaTransformationPoc.md  VirtualGateway.md  bootstrapping.md
r2_seil_common/glue/: Dockerfile
r2_seil_common/lambda/: Dockerfile  Dockerfile.test  README.md  tasks.py
r2_seil_common/lambda/api/gam-client-service/: pyproject.toml
r2_seil_common/lambda/api/gam-client-service/app/: __init__.py  lambda_handler.py
r2_seil_common/lambda/api/gam-client-service/app/clients/: forecast_client.py  forecast_client_mock.py  lineitem_client.py  lineitem_client_mock.py  order_client.py  order_client_mock.py  proposal_client.py  proposal_client_mock.py  proposal_lineitem_client.py  proposal_lineitem_client_mock.py
r2_seil_common/lambda/api/gam-client-service/app/models/: create_lineitems_request.py  create_lineitems_response.py  create_order_request.py  create_order_response.py  create_proposal_lineitem_request.py  create_proposal_lineitem_response.py  create_proposal_request.py  create_proposal_response.py  forecast_request.py  forecast_response.py  get_lineitems_request.py  get_lineitems_response.py  get_orders_request.py  get_orders_response.py  get_proposal_lineitem_request.py  get_proposal_lineitem_response.py  get_proposals_request.py  get_proposals_response.py  lineitem_update.py  perform_lineitem_action_response.py  perform_order_action_request.py  perform_order_action_response.py  perform_proposal_action_request.py  perform_proposal_action_response.py  perform_proposal_lineitem_action_request.py  perform_proposal_lineitem_action_response.py  update_lineitems_request.py  update_lineitems_response.py  update_proposal_lineitem_request.py  update_proposal_lineitem_response.py  update_proposal_request.py  update_proposal_response.py
r2_seil_common/lambda/api/gam-client-service/tests/forecast/: test_client.py  test_client_mock.py  test_lambda_handler.py
r2_seil_common/lambda/api/gam-client-service/tests/lineitem/: test_client.py  test_client_mock.py  test_lambda_handler.py
r2_seil_common/lambda/api/gam-client-service/tests/order/: test_client.py  test_client_mock.py  test_lambda_handler.py
r2_seil_common/lambda/api/gam-client-service/tests/proposal/: test_client.py  test_client_mock.py  test_lambda_handler.py
r2_seil_common/lambda/api/gam-client-service/tests/proposal_lineitem/: test_client.py  test_client_mock.py  test_lambda_handler.py
r2_seil_common/lambda/api/gam-router-service/: pyproject.toml
r2_seil_common/lambda/api/gam-router-service/app/: lambda_handler.py
r2_seil_common/lambda/api/gam-router-service/tests/: test_lambda_handler.py
r2_seil_common/lambda/api/gam-router-service/tests/resources/: event_payload_invalid.json
r2_seil_common/lambda/api/tech1-client-service/: pyproject.toml
r2_seil_common/lambda/api/tech1-client-service/app/: __init__.py  container.py  lambda_handler.py  techone_client.py  techone_client_mock.py
r2_seil_common/lambda/api/tech1-client-service/tests/: test_techone_client.py
r2_seil_common/lambda/demo/hello/: pyproject.toml
r2_seil_common/lambda/demo/hello/app/: __init__.py  lambda_handler.py
r2_seil_common/lambda/demo/hello/tests/: test_lambda_handler.py
r2_seil_common/lambda/demo/ingest/: pyproject.toml
r2_seil_common/lambda/demo/ingest/app/: __init__.py  file_proc.py
r2_seil_common/lambda/demo/ingest/tests/: test_file_proc.py
r2_seil_common/lambda/gam-to-sf/delivery-reporting/: pyproject.toml
r2_seil_common/lambda/gam-to-sf/delivery-reporting/app/: __init__.py  lambda_handler.py
r2_seil_common/lambda/gam-to-sf/delivery-reporting/app/clients/: common.py  lineitem_client.py  lineitem_client_mock.py  order_client.py  order_client_mock.py  proposal_client.py  proposal_client_mock.py  report_client.py  report_client_mock.py
r2_seil_common/lambda/gam-to-sf/delivery-reporting/app/models/: sync_errors.py
r2_seil_common/lambda/gam-to-sf/delivery-reporting/tests/: test_app.py  test_report_client.py
r2_seil_common/lambda/sf-to-dw/ingest/: pyproject.toml
r2_seil_common/lambda/sf-to-dw/ingest/app/: __init__.py  ingest.py
r2_seil_common/lambda/sf-to-dw/ingest/tests/: conftest.py  test_ingest.py
r2_seil_common/lambda/sf-to-t1/billing/: pyproject.toml
r2_seil_common/lambda/sf-to-t1/billing/app/: __init__.py  csv_parser.py  lambda_handler.py  salesforce.py
r2_seil_common/lambda/sf-to-t1/billing/tests/: test_csv_parser.py
r2_seil_common/lambda/utilities/activateflows/: pyproject.toml
r2_seil_common/lambda/utilities/activateflows/app/: __init__.py  lambda_handler.py
r2_seil_common/lib/common/: pyproject.toml
r2_seil_common/lib/common/core/: exceptions.py  response_mapper.py  transaction_context.py  utils.py
r2_seil_common/lib/common/core/model/: bad_request.py  error_response.py  server_error.py  success_response.py
r2_seil_common/lib/gam/: README.md  pyproject.toml
r2_seil_common/lib/gam/gam_core/: __init__.py  client_factory.py  container.py  service_account.py  utils.py
r2_seil_common/lib/gam/gam_core/model/: bad_request.py  guard_exception.py  line_item.py  object_from_dict.py  order.py  proposal.py  proposal_lineitem.py  server_error.py
r2_seil_common/lib/gam/tests/: test_client_factory.py  test_container.py  test_service_account.py
r2_seil_common/lib/salesforce/: pyproject.toml
r2_seil_common/lib/salesforce/salesforce_core/: container.py  sf_service_account.py
r2_seil_common/lib/tech1-ci/: pyproject.toml
r2_seil_common/lib/tech1-ci/tech1_ci/: client_factory.py  container.py  rpc.py
r2_seil_common/lib/tech1-ci/tests/: test_rpc.py  wsdl
r2_seil_common/pipelines/: README.md  account-create-update-stack.yaml  delete-stack.yaml  environment-create-update-stack.yaml  glue-local-docker-build.yaml  python-code-quality-check.yaml
(+75 files in other folders)
