[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Ming Li <mingxuan.li@contino.io>"]

[tool.poetry.dependencies]
python = "~3.9"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
