[tool.poetry]
name = "app"
version = "0.1.0"
description = "Router Service to process request from apigateway and routes to downstream lambda service"
authors = ["Ming Li <mingxuan.li@contino.io>"]

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "^1.21.11"
aws-xray-sdk = "^2.9.0"
dependency-injector = "^4.38.0"
pytz = "^2021.3"
requests = "^2.27.1"
aws-lambda-context = "^1.1.0"
pathlib3x = "^1.3.9"
core = { path = "../../../lib/common", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
