[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tom Taylor <tom.taylor@contino.io>"]

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "<1.26.100"
requests = "^2.27.1"
aws-xray-sdk = "^2.9.0"
dependency-injector = "^4.38.0"
auth-client = { path = "../../../lib/auth", develop = true }
core = { path = "../../../lib/common", develop = true }

[tool.poetry.dev-dependencies]
pytest = "=7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
