[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pyarrow = "^7.0.0"
boto3 = "^1.20.51"
pandas = "^1.4.0"
aws-xray-sdk = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
