[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pyarrow = "^7.0.0"
boto3 = ">=1.21.4, <1.21.5"
pandas = "^1.4.0"
aws-xray-sdk = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "=7.1.3"
tox = "^3.24.5"
freezegun = "^1.1.0"
moto = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
